# allyourlinks

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  tailwind.config.js
.sqlx/: query-0001e5b475156c5606b6b486de093f1495f91f0f7c302cd748a2245185d89676.json  query-0a6ccfc84d2301113bc704acd45775f12d7c2e82faf04a2a345dbdd4a7e59f12.json  query-19fea698cb7317b85bb46e667754c05c70c7946f2d38a4c94cbaca1af2628c7c.json  query-1a234db3299a97b55124d9bc044fd7b527fd01dcf717d637c5e0262fd4529b27.json  query-2ecfbb502882113dc81fab8311be656ab2521b5712739d44792d5275896783a4.json  query-67ad60e518d9b73d212c80f664d39e1983d4e86dccdbc3eeca1b8e03dddab58f.json  query-944c16afd28602c88663a4e42eed0d6d3ca44fd2612a16aa16ede638cecbcec7.json  query-ebab6308c34d8af3c6c39804e767f02f428941ad3bc1a392f6dea14b31d39582.json
migrations/: 20230224222836_create-users.up.sql  20230225205602_add-bio-and-photo-to-user.down.sql  20230225205602_add-bio-and-photo-to-user.up.sql  20230226171659_create-table-links.down.sql  20230226171659_create-table-links.up.sql
src/: database.rs  events.rs  icons.rs  main.rs
static/: output.css
