[package]
name = "allyourlinks"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.3" }
dioxus-free-icons = { version = "0.6.0", features = ["bootstrap"] }
dioxus-liveview = { version = "0.3", features = ["salvo"] }
dioxus-ssr = "0.3.0"
salvo = { version = "0.37", features = ["full", "affix", "ws"] }
sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["full"] }
rust-embed = { version = "6.4.2" }
serde = "1.0.152"
anyhow = "1.0.69"
rand = "0.8.5"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
fermi = "0.3.0"

[profile.dev.package.sqlx-macros]
opt-level = 3
